--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,5 +18,5 @@ jobs:
                 (when (probe-file quicklisp-init)
               (load quicklisp-init)))' > ~/.sbclrc
     - name: Run Test
-      run: cp -r pippet ~/quicklisp/local-projects && echo "(ql:quickload :rove)(rove:run :pippet/tests)" > test.lisp && sbcl --script test.lisp
+      run: cp -r /home/runner/work/pippet/pippet ~/quicklisp/local-projects && echo "(ql:quickload :rove)(rove:run :pippet/tests)" > test.lisp && sbcl --script test.lisp
 
