--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,5 +12,8 @@ jobs:
     - name: Install sbcl
       run: sudo apt install sbcl
     - name: Install quicklisp && TEST
-      run: cp -r /home/runner/work/pippet/pippet ~/quicklisp/local-projects && curl -O https://beta.quicklisp.org/quicklisp.lisp && echo '(load "quicklisp.lisp")(quicklisp-quickstart:install)(ql:quickload :rove)(rove:run :pippet/tests)' > install.lisp && sbcl --load quicklisp.lisp --script install.lisp
+      run: cp -r /home/runner/work/pippet/pippet ~/quicklisp/local-projects && \
+        curl -O https://beta.quicklisp.org/quicklisp.lisp && \
+        echo '(load "quicklisp.lisp")(quicklisp-quickstart:install)(ql:quickload :rove)(rove:run :pippet/tests)' > install.lisp
+        #sbcl --load quicklisp.lisp --script install.lisp
 
