--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,8 +12,8 @@ jobs:
     - name: Install sbcl
       run: sudo apt install sbcl
     - name: Install quicklisp && TEST
-      run:
-        curl -O https://beta.quicklisp.org/quicklisp.lisp && \
+      run: |
+        curl -O https://beta.quicklisp.org/quicklisp.lisp
         echo '(load "quicklisp.lisp")(quicklisp-quickstart:install)(ql:quickload :rove)(rove:run :pippet/tests)' > install.lisp
         cp -r /home/runner/work/pippet/pippet ~/quicklisp/local-projects
         sbcl --load quicklisp.lisp --script install.lisp
