--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,8 @@ jobs:
     - name: Install quicklisp && TEST
       run: |
         curl -O https://beta.quicklisp.org/quicklisp.lisp
-        echo '(load "quicklisp.lisp")(quicklisp-quickstart:install)(ql:quickload :rove)(rove:run :pippet/tests)' > install.lisp
-        cp -r /home/runner/work/pippet/pippet ~/quicklisp/local-projects
+        echo '(load "quicklisp.lisp")(quicklisp-quickstart:install)' > install.lisp
+        echo '(ql:quickload :rove)(rove:run :pippet/tests)' > test.lisp
         sbcl --load quicklisp.lisp --script install.lisp
-
+        cp -r /home/runner/work/pippet/pippet ~/quicklisp/local-projects
+        sbcl --script test.lisp
