--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,13 +10,12 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Install sbcl
-      run: sudo apt install sbcl
+      run: sudo apt-get install sbcl
     - name: Install quicklisp && TEST
       run: |
         curl -O https://beta.quicklisp.org/quicklisp.lisp
         echo '(load "quicklisp.lisp")(quicklisp-quickstart:install)' > install.lisp
-        echo '(ql:quickload :rove)(rove:run :pippet/tests)' > test.lisp
+        echo '(let ((quicklisp-init (merge-pathnames "quicklisp/setup.lisp" (user-homedir-pathname)))) (when (probe-file quicklisp-init)(load quicklisp-init)))(ql:quickload :rove)(rove:run :pippet/tests)' > test.lisp
         sbcl --load quicklisp.lisp --script install.lisp
-        echo '(let ((quicklisp-init (merge-pathnames "quicklisp/setup.lisp" (user-homedir-pathname)))) (when (probe-file quicklisp-init)(load quicklisp-init)))' >> ~/.sbclrc
         cp -r /home/runner/work/pippet/pippet ~/quicklisp/local-projects
         sbcl --script test.lisp
