use non binary sbcl

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
         ./configure
         make
         sudo make install
+        ros install sbcl
+        ros use sbcl
         ros setup
     - name: Test
       run: |
