--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,5 @@ jobs:
     - name: Test
       run: |
         export PATH=~/.roswell/bin:$PATH
-        cp -r ~/pippet ~/.roswell/local-projects
-        rove ~/pippet/tests/cpu.lisp
+        cp -r pippet ~/.roswell/local-projects
+        rove pippet/tests/cpu.lisp
